# savage-labs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  ENGINE_INVARIANTS.md  Procfile  README.md  dev-restart.sh  env.example
.claude/: launch.json
backend/: pyproject.toml
backend/data/: shc.duckdb
backend/src/shc/: cli.py  config.py  lab.py  metrics.py  selflab.py
backend/src/shc/ai/: _personal_context.py  briefing.py  lab_findings.py  quality.py  vault.py  workout_planner.py
backend/src/shc/api/: deps.py  main.py  middleware.py
backend/src/shc/api/routers/: apple.py  auth.py  chat.py  dashboard.py  experiments.py  hevy.py  progress_photos.py  report.py  subject.py  training.py  vault.py
backend/src/shc/db/: schema.py
backend/src/shc/db/migrations/: 0004_footwear_observations.sql  0005_ai_briefing.sql  0006_hevy.sql  0007_metrics_and_checkin.sql  0009_metrics_and_checkin.sql  0010_ai_health_story.sql  0016_mesocycle_defaults.sql  0018_drop_session_logs.sql  0019_research_lab.sql  0022_clean_implausible_respiratory_rate.sql  0023_lab_rotation.sql  0024_workout_sets_exercise_notes.sql  0025_performance_features.sql  0026_dupr_snapshots.sql  0027_dupr_matches.sql  0028_lift_volume_study.sql  0029_progress_photos.sql  0030_physique_critiques.sql  0031_ai_daily_report.sql  0032_daily_report_sources_mode.sql  0033_filter_load_modality.sql  0034_hrv_baseline_exclude_today.sql  0035_midday_sessions.sql  0036_exercise_muscle_map_gaps.sql  0037_hevy_missing_fields.sql  0038_seed_muscle_map_from_templates.sql  0039_purge_yoga_from_cardio.sql  0040_muscle_taxonomy_reconcile.sql  0041_complete_muscle_map.sql  0042_fold_brachialis.sql  0043_fix_hinge_and_press_mapping.sql  0044_hrv_baseline_calendar_window.sql  0045_backfill_dynamic_secondaries.sql  0046_v_daily_load_use_dedup.sql  0047_phase3_self_learning.sql  0048_signal_cache_and_prescription_log.sql  0049_protein_checkin.sql  0050_personal_deload_threshold.sql  0051_engine_accuracy_history.sql  0052_gait_daily_view.sql  (+22 more)
backend/src/shc/ingest/: apple.py  apple_xml.py  clinical_profile.py  dupr.py  fitbod.py  hevy.py  whoop.py
backend/src/shc/scheduler/: jobs.py
backend/src/shc/training/: alias_audit.py  autoregulation.py  exercise_classifier.py  load_mechanics.py  mesocycle.py  self_learning.py  volume.py
backend/src/shc/vision/: METHODOLOGY.md  __init__.py  noise.py  overlay.py  pipeline.py  quality_gate.py
backend/tests/: conftest.py  test_alias_audit.py  test_autoregulation.py  test_body_comp_note.py  test_compute_daily_state.py  test_dedup_view.py  test_e1rm_by_exercise.py  test_e1rm_regression.py  test_engine_invariants.py  test_exercise_muscle_unified.py  test_exercise_science_coverage.py  test_exercise_selection.py  test_freshness.py  test_gates.py  test_lab_runner_errors.py  test_load_mechanics.py  test_mesocycle_e1rm.py  test_muscle_volume.py  test_plan_quality.py  test_prior_actuation.py  test_readiness.py  test_scoring.py  test_self_learning.py  test_selflab.py  test_sleep.py  test_subject_profile.py  test_training_load.py  test_validate_plan.py  test_vision_controls.py  test_whoop_ingest.py
docs/: API.md
frontend/: AGENTS.md  next.config.ts  package-lock.json  package.json
(+62 files in other folders)
