[project]
name = "shc"
version = "0.1.0"
description = "Savage Labs — personal health intelligence platform"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    # Scheduler
    "apscheduler>=3.10",
    # Storage
    "duckdb>=1.1",
    # HTTP client
    "httpx>=0.28",
    # Secrets / auth
    "keyring>=25",
    # File watching
    "watchdog>=5",
    # Data / validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # XML / CCDA parsing
    "lxml>=5",
    "defusedxml>=0.7",
    # Utilities
    "python-dotenv>=1.0",
    "click>=8.1",
    "pytz>=2026.1.post1",
    "pyyaml>=6",
    "model2vec>=0.8.1",
    # Vision — progress-photo body tracking (all local, no external calls)
    "mediapipe>=0.10",
    "rembg[cpu]>=2.0",
    "opencv-python-headless>=4.10",
    "pillow>=10",
    "numpy>=1.26",
    "pillow-heif>=1.3.0",
]

[project.scripts]
shc = "shc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shc"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are immutable sentinels, not real calls.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.Query"]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "vcrpy>=6",
    "ruff>=0.8",
    "pyright>=1.1",
]
